# Example

./: Example.code-workspace  platformio.ini
include/: lv_i18n.h
lib/Lvgl/: lv_conf.h
lib/Lvgl/src/extra/libs/png/: lv_png.c
src/: CMakeLists.txt  CST816D.cpp  CST816D.h  filelist.txt  main.ino  project.info  ui.c  ui.h  ui_events.c  ui_events.h
src/fonts/: ui_font_Font14.c  ui_font_Font20.c  ui_font_FontBold16.c  ui_font_FontBold25.c  ui_font_FontBold30.c
src/images/: fan.c  images.h  temperature.c
src/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h
